2004-10-26 Alain Magloire
	Remove of ICDISignalManager in CDI
	* cdi/org/eclipse/cdt/debug/core/cdi/ICDISession.java
	* cdi/org/eclipse/cdt/debug/core/cdi/ICDISignalManager.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDITarget.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIThreadGroup.java

	* CSignalManager.java

2004-10-25 Mikhail Khodjaiants
	NPE in "CVlaue.isUnsigned". Check if the type of the parent variable is null.
	* CValue.java

2004-10-25 David Inglis
	Deprecated environment launch constent in favor of the constant provided by the debug.core.
	* src/org/eclipse/cdt/debug/core/ICDTLaunchConfigurationConstants.java
	
2004-10-25 Alain Magloire
	Remove of the class ICDIExpressionManager.
	instead new clas ICDIExpressionManagegment that is on the ICDITarget
	* cdi/org/eclipse/cdt/debug/core/cdi/ICDISession.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIExpression.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIThreadGroup.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIExpressionManagement.java

	* CDebugModel.java
	* CDIDebugModel.java
	* CExpression.java
	* CFormattedMemoryBlock.java
	* CStackFrame.java

2004-10-22 Mikhail Khodjaiants
	Replaced the deprecated "evaluateExpressionTtoString" method of "ICDITarget.
	* CDebugTarget.java
	* CStackFrame.java
	* CExtendedMemoryBlockRetrieval.java

2004-10-22 Alain Magloire
	Provide a context for ICDITarget.evaluateExpressionTtoString()
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDITarget.java

2004-10-22 Mikhail Khodjaiants
	Fire the suspend event for the current thread on the target creation.
	* CDebugTarget.java

2004-10-21 Mikhail Khodjaiants
	Thread should handle CDI events from the corresponding CDI thread only.
	"canSuspend" should return true if the thread is stepping.
	New implementation of "stepReturn" for stack frames.
	* CThread.java
	* CStackFrame.java

2004-10-21 Mikhail Khodjaiants
	Pass the target state to threads on terminate, disconnect, resume, suspend and restart.